samples/_failures_safe/1761788366_361d1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baf771f2.c: In function ‘main’:
./samples/SAFE/__tmp_baf771f2.c:132:9: error: expected declaration or statement at end of input
  132 |         }
      |         ^
./samples/SAFE/__tmp_baf771f2.c:132:9: error: expected declaration or statement at end of input
